# secure-serial

./: Cargo.toml  LICENSE-MIT  README.md
doc/: serial-format.md
examples/: simple.rs
src/: lib.rs  protocol.rs  receiver.rs  resources.rs  sender.rs  transport.rs
tests/: fault_injection.rs
