[package]
name = "secure-serial"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Reliable CRC-framed serial protocol with chunked packets and ACKs for no_std + Embassy"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/secure-serial"
keywords = ["serial", "uart", "embassy", "embedded", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
embassy-futures = "0.1"
embassy-sync = "0.8"
embassy-time = "0.5"
heapless = "0.9"
embedded-buffer-pool = "0.2.0"
defmt = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
embassy-time = { version = "0.5", features = ["std", "generic-queue-64"] }
embassy-sync = { version = "0.8", features = ["std"] }
critical-section = { version = "1.2", features = ["std"] }
static_cell = "2"
crc = "3.4"
